--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(gmt2mat)
 export(gset.cor)
 export(gset.fisher)
 export(gset.fisher2)
+export(makeGseaResult)
 export(mat2gmt)
 export(read.gmt)
 export(ultragsea)
