--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(fgsea)
 export(gmt2mat)
 export(goat)
 export(gset.cor)
+export(gset.fastFET)
 export(gset.ztest)
 export(makeGseaResult)
 export(mat2gmt)
