--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(gset.fastFET)
 export(gset.ztest)
 export(makeGseaResult)
 export(mat2gmt)
+export(matrix_metap)
 export(read.gmt)
 export(ultragsea)
 export(write.gmt)
