--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,12 +3,15 @@
 export(fgsea)
 export(gmt2mat)
 export(goat)
-export(gset.cor)
+export(gset.cortest)
 export(gset.fastFET)
 export(gset.ztest)
 export(makeGseaResult)
 export(mat2gmt)
-export(matrix_metap)
+export(plaid.cortest)
+export(plaid.dualtest)
+export(plaid.limma)
+export(plaid.ttest)
 export(read.gmt)
 export(ultragsea)
 export(write.gmt)
